--- a/date/2025-04/index.htm
+++ b/date/2025-04/index.htm
@@ -297,8 +297,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-98281.htm">动物打疫苗前后要注意什么事项呢（动物接种疫苗前的准备）</a></h4>
-                <p>摘要：       今天给各位分享动物打疫苗前后要注意什么事项呢的知识，其中也会对动物接种疫苗前的准备进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打疫.</p>
+                <h4><a href="/news/article-86453.htm">哪里可以免费领养猫咪（哪里可以免费领养猫咪的猫）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈哪里可以免费领养猫咪，以及哪里可以免费领养猫咪的猫对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里可以领养猫?2、...       </p>
             </div>
         </div>
     </div>
@@ -307,48 +307,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-87163.htm">Java ArrayList集合(Java动态数组)</a></h4>
-                <p>Java ArrayList集合（Java动态数组）  一、ArrayList集合的概述和基本使用   1.概述 2.基本使用   二、ArrayList集合的详细介绍   1.定义一个ArrayLi</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-99745.htm">虚拟机搭建负载均衡，mysql主从复制和读写分离（四、搭建主从复制和读写分离）</a></h4>
-                <p>虚拟机搭建负载均衡，mysql主从复制和读写分离（一、搭建虚拟机） 虚拟机搭建负载均衡，mysql主从复制和读写分离（二、克隆虚拟机） 虚拟机搭建负载均衡，mysql主从复制和读写分离（三、搭建负载均</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-92323.htm">动物疫苗知识大全图片（动物疫苗的了解）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗知识大全图片的知识，其中也会对动物疫苗的了解进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打的预防针,国产的跟.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-89339.htm">动物疫苗使用方法（动物疫苗接种方法有哪些）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗使用方法，以及动物疫苗接种方法有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗狗疫苗怎么打2、...        本篇文</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-98956.htm">SpringBoot如何整合spring-retry来实现接口请求重试</a></h4>
-                <p>一、重试机制 由于网络不稳定或网络抖动经常会造成接口请求失败的情况，当我们再去尝试就成功了，这就是重试机制。 本文首发于Java潘老师个人博客：SpringBoot整合spring-retry组件实现</p>
+                <h4><a href="/news/article-95327.htm">C# DataTable去重，根据列名去重保留其他列</a></h4>
+                <p>//去掉重复行 DataView dv = table.DefaultView; table = dv.ToTable(true, new string[] { "name", "code" }); </p>
             </div>
         </div>
     </div>
@@ -367,8 +327,38 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-91574.htm">有人死于被猫抓伤吗（有人死于被猫抓伤吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈有人死于被猫抓伤吗，以及有人死于被猫抓伤吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、真的有被猫抓伤死的人吗2、...        </p>
+                <h4><a href="/news/article-106800.htm">如何在 C# 循环中捕获局部变量？</a></h4>
+                <p>问题： 我遇到了一个有趣的问题，它的代码大概是这样的。 List&lt;Func&lt;int&gt;&gt;&nbsp;actions&nbsp;=&nbsp;new&nbsp;List&lt;Fu</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-91573.htm">成都动物疫苗接种点 成都动物疫苗接种点查询</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于成都动物疫苗接种点的问题，于是小编就整理了3个相关介绍成都动物疫苗接种点的解答，让我们一起看看吧。成都哪有给宠物办理检疫证的地方</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-12-node-share-links.htm">4月12日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、韩国、香港、美国、新加坡、加拿大等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-13-free-node-subscribe.htm">4月13日更新19.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、香港、加拿大、韩国、美国、新加坡等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -387,8 +377,18 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-96820.htm">Java中Scanner的方法</a></h4>
-                <p>JavaScanner的next与nextLine方法  1. 前言 在Scanner类中 有许多的方法 常用的有 nextInt()、nextFloat()、nextDouble()、next()、</p>
+                <h4><a href="/news/article-90828.htm">猫儿身上有跳蚤怎么去除（猫身上有跳蚤怎么治）</a></h4>
+                <p>摘要：       今天给各位分享猫儿身上有跳蚤怎么去除的知识，其中也会对猫身上有跳蚤怎么治进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猫去跳蚤最简单的方.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-101153.htm">哥本哈根减肥餐（哥本哈根减肥餐单）</a></h4>
+                <p>本文目录       哥本哈根食谱原版？  第一天   早餐：全麦面包1片、生姜红茶1杯、苹果1个     午餐：玉米200g、水煮蔬菜1份  晚餐：鸡肉200g、脱脂牛奶150g、水果1份    第</p>
             </div>
         </div>
     </div>
@@ -399,7 +399,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
