--- a/free-nodes/2025-5-8-clash-node-daily-updates.htm
+++ b/free-nodes/2025-5-8-clash-node-daily-updates.htm
@@ -143,6 +143,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-5-7-clash-node.htm">5月7日更新21.8M/S，2025年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点地址分享</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-5-9-clash-v2ray-ss-ssr.htm">5月9日更新18.4M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -170,16 +171,6 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-100538.htm">linux安装离线docker包教程,Centos7离线安装Docker</a></h4>
-                <p>工作原因需要在客户现场离线安装docker，网上看了很多，官方文档也查了一下，总结如下： (已在客户现场成功安装，Centos7，其他linux版本没试过，感觉应该问题不大) 1. 下载离线安装包 提</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
                 <h4><a href="/news/article-94562.htm">中文时间日期解析错误-UnicodeEncodeError: &#8216;locale&#8217; codec can&#8217;t encode character &#8216;\u5e74&#8217; in position 2: Illegal</a></h4>
                 <p>参考：https://segmentfault.com/q/1010000003070325 &nbsp; &nbsp; &nbsp; &nbsp;word = (datetime.today() +</p>
             </div>
@@ -190,8 +181,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-98955.htm">pytorch 自动构建任意层的深度神经网络(DNN)</a></h4>
-                <p>动手撸神经网络的代码，是大家常常遇到的问题。在设计自己的网络时，需要考虑网络大小，隐藏层层数，激活函数和参数初始化方法。最笨拙的方法就是固定下来，发生变化就要手动调整一次。这里介绍一种可以自动生生网络</p>
+                <h4><a href="/news/article-101902.htm">被猫抓伤多久过危险期啊（被猫抓伤后多长时间过安全期）</a></h4>
+                <p>摘要：       今天给各位分享被猫抓伤多久过危险期啊的知识，其中也会对被猫抓伤后多长时间过安全期进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、被猫抓伤后.</p>
             </div>
         </div>
     </div>
@@ -200,8 +191,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-102704.htm">宠物猫疫苗要多少钱一次（宠物猫疫苗多少钱打一次）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物猫疫苗要多少钱一次，以及宠物猫疫苗多少钱打一次对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫咪打疫苗多少钱?2、...      </p>
+                <h4><a href="/news/article-96082.htm">深圳宠物打疫苗（深圳宠物打疫苗多少钱）</a></h4>
+                <p>摘要：       今天给各位分享深圳宠物打疫苗的知识，其中也会对深圳宠物打疫苗多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、深圳市宝安区福永镇在哪里.</p>
             </div>
         </div>
     </div>
@@ -210,8 +201,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-27-free-ssr-node.htm">4月27日更新22.1M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、加拿大、美国、欧洲、韩国、日本等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-87164.htm">netty系列之:在netty中使用native传输协议</a></h4>
+                <p>对于IO来说，除了传统的block IO,使用最多的就是NIO了，通常我们在netty程序中最常用到的就是NIO,比如NioEventLoopGroup,NioServerSocketChannel等</p>
             </div>
         </div>
     </div>
@@ -220,8 +211,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-14-free-clash-subscribe.htm">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-95327.htm">C# DataTable去重，根据列名去重保留其他列</a></h4>
+                <p>//去掉重复行 DataView dv = table.DefaultView; table = dv.ToTable(true, new string[] { "name", "code" }); </p>
             </div>
         </div>
     </div>
@@ -230,8 +221,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-90081.htm">请多多无货源店怎么开（拼多多无货源店怎么开）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈请多多无货源店怎么开，以及拼多多无货源店怎么开对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、拼多多怎么做无货源店铺...        </p>
+                <h4><a href="/free-nodes/2025-4-20-free-v2ray-subscribe.htm">4月20日更新22.1M/S，2025年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、加拿大、韩国、日本、新加坡、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -240,8 +231,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-11-clash-node-daily-updates.htm">4月11日更新21.7M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、韩国、欧洲、美国、新加坡、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-5-5-node-share.htm">5月5日更新21.7M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、韩国、欧洲、新加坡、美国、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -250,8 +241,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-96820.htm">Java中Scanner的方法</a></h4>
-                <p>JavaScanner的next与nextLine方法  1. 前言 在Scanner类中 有许多的方法 常用的有 nextInt()、nextFloat()、nextDouble()、next()、</p>
+                <h4><a href="/news/article-109328.htm">QT学习-08-Qt连接Sqllite数据库</a></h4>
+                <p>QT连接sqllite数据库  1.SQLlite简述： SQLite是一款开源轻量级的数据库软件，不需要server，可以集成在其他软件中，非常适合嵌入式系统。Qt5以上版本可以直接使用SQLite</p>
             </div>
         </div>
     </div>
@@ -260,8 +251,18 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-105981.htm">nginx进程管理</a></h4>
-                <p>nginx进程管理==&gt; master + 多个worker进程 master进程：全局的初始化 和管理 worker进程 worker进程：主要业务逻辑，事件处理 通信：socketpair </p>
+                <h4><a href="/news/article-106801.htm">动物疫苗分几种类别（动物疫苗分几种类别的）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物疫苗分几种类别，以及动物疫苗分几种类别的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗狗疫苗有几种?2、...        本篇</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-5-13-free-clash-subscribe.htm">5月13日更新22.7M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、香港、欧洲、加拿大、新加坡、美国等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -272,7 +273,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
