--- a/privacy.htm
+++ b/privacy.htm
@@ -167,8 +167,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-105159.htm">瑞鹏宠物医院好不好（瑞鹏宠物医院大众点评）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈瑞鹏宠物医院好不好，以及瑞鹏宠物医院大众点评对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、新瑞鹏宠物医院怎么样?2、...       </p>
+                <h4><a href="/news/article-96082.htm">深圳宠物打疫苗（深圳宠物打疫苗多少钱）</a></h4>
+                <p>摘要：       今天给各位分享深圳宠物打疫苗的知识，其中也会对深圳宠物打疫苗多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、深圳市宝安区福永镇在哪里.</p>
             </div>
         </div>
     </div>
@@ -177,8 +177,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-111017.htm">猫咪注射疫苗要多少钱（猫***疫苗多少钱）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫咪注射疫苗要多少钱，以及猫打针疫苗多少钱对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫打疫苗多少钱?2、...        本篇文</p>
+                <h4><a href="/news/article-90828.htm">猫儿身上有跳蚤怎么去除（猫身上有跳蚤怎么治）</a></h4>
+                <p>摘要：       今天给各位分享猫儿身上有跳蚤怎么去除的知识，其中也会对猫身上有跳蚤怎么治进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猫去跳蚤最简单的方.</p>
             </div>
         </div>
     </div>
@@ -187,8 +187,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-106800.htm">如何在 C# 循环中捕获局部变量？</a></h4>
-                <p>问题： 我遇到了一个有趣的问题，它的代码大概是这样的。 List&lt;Func&lt;int&gt;&gt;&nbsp;actions&nbsp;=&nbsp;new&nbsp;List&lt;Fu</p>
+                <h4><a href="/news/article-98955.htm">pytorch 自动构建任意层的深度神经网络(DNN)</a></h4>
+                <p>动手撸神经网络的代码，是大家常常遇到的问题。在设计自己的网络时，需要考虑网络大小，隐藏层层数，激活函数和参数初始化方法。最笨拙的方法就是固定下来，发生变化就要手动调整一次。这里介绍一种可以自动生生网络</p>
             </div>
         </div>
     </div>
@@ -197,8 +197,28 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-94561.htm">动态指针时钟：利用pyqt5制作指针钟表显示实时时间</a></h4>
-                <p>【阅读全文】 文末附完整源代码实现过程... 想实现这样一个功能，然后pyqt5中又没有现成的组件可以使用，于是就想着只能通过绘图的方式来实现。说到绘图的话，turtle框架无疑是最常见的选择，但其实</p>
+                <h4><a href="/news/article-97507.htm">动物医院名字大全集图片（动物医院牌匾）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物医院名字大全集图片，以及动物医院牌匾对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、请帮忙起个宠物医院的名字...        本篇</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-89339.htm">动物疫苗使用方法（动物疫苗接种方法有哪些）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物疫苗使用方法，以及动物疫苗接种方法有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗狗疫苗怎么打2、...        本篇文</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-8-clash-windows.htm">4月8日更新21.2M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、欧洲、美国、香港、新加坡、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -217,8 +237,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-107644.htm">狗狗舔人会传染寄生虫吗（小狗驱虫几天排干净虫）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈狗狗舔人会传染寄生虫吗，以及小狗驱虫几天排干净虫对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物狗用舌头舔人的身上,人的身上会不会..</p>
+                <h4><a href="/news/article-93048.htm">宠物品牌起名字大全（宠物品牌介绍）</a></h4>
+                <p>摘要：       今天给各位分享宠物品牌起名字大全的知识，其中也会对宠物品牌介绍进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物店取什么名字好...   </p>
             </div>
         </div>
     </div>
@@ -227,8 +247,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-101153.htm">哥本哈根减肥餐（哥本哈根减肥餐单）</a></h4>
-                <p>本文目录       哥本哈根食谱原版？  第一天   早餐：全麦面包1片、生姜红茶1杯、苹果1个     午餐：玉米200g、水煮蔬菜1份  晚餐：鸡肉200g、脱脂牛奶150g、水果1份    第</p>
+                <h4><a href="/news/article-108479.htm">动物接种的途径有哪些分别适用于何种病毒（动物接种的优点和缺点）</a></h4>
+                <p>摘要：       今天给各位分享动物接种的途径有哪些分别适用于何种病毒的知识，其中也会对动物接种的优点和缺点进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
             </div>
         </div>
     </div>
@@ -237,28 +257,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-17-node-share-links.htm">4月17日更新22.8M/S，2025年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、美国、新加坡、日本、加拿大、欧洲等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-85729.htm">长沙宠物领养贴吧 长沙宠物领养贴吧论坛</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于长沙宠物领养贴吧的问题，于是小编就整理了4个相关介绍长沙宠物领养贴吧的解答，让我们一起看看吧。请问长沙有没有收留藏獒的地方？长沙</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-110168.htm">动物疫苗生产厂家排名前十名有哪些品种（动物疫苗有哪些大厂家）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗生产厂家排名前十名有哪些品种，以及动物疫苗有哪些大厂家对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猪用高品质疫苗那个公司最..</p>
+                <h4><a href="/news/article-100538.htm">linux安装离线docker包教程,Centos7离线安装Docker</a></h4>
+                <p>工作原因需要在客户现场离线安装docker，网上看了很多，官方文档也查了一下，总结如下： (已在客户现场成功安装，Centos7，其他linux版本没试过，感觉应该问题不大) 1. 下载离线安装包 提</p>
             </div>
         </div>
     </div>
@@ -269,7 +269,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
